# chatbot

./: CMakeLists.txt
example/: CMakeLists.txt  main.cpp  script.txt
header/: interpreter.h  myerror.h  parser.h  stub.h
src/: CMakeLists.txt  interpreter.cpp  myerror.cpp  parser.cpp  stub.cpp
test/: CMakeLists.txt  interpretertest.cpp  parsertest.cpp
test/interpreter_txt/: 1_input.txt  1_true.txt  2.txt  inter_script2.txt
test/parsertest_txt/: testscript1.txt  truescript4.txt
